--- a/Todoey/Base.lproj/Main.storyboard
+++ b/Todoey/Base.lproj/Main.storyboard
@@ -32,7 +32,14 @@
                             <outlet property="delegate" destination="nYv-7N-bEU" id="gmF-XF-eZQ"/>
                         </connections>
                     </tableView>
-                    <navigationItem key="navigationItem" title="Todoey" id="kwB-na-8GG"/>
+                    <navigationItem key="navigationItem" title="Todoey" id="kwB-na-8GG">
+                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="cFH-Um-R5A">
+                            <color key="tintColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                            <connections>
+                                <action selector="addButtonPressed:" destination="nYv-7N-bEU" id="eFT-Nf-l29"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Icn-sS-eIF" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
